--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch MainnClass",
+            "request": "launch",
+            "mainClass": "MainnClass",
+            "projectName": "0401_e83f8e3a"
+        },
+        {
+            "type": "java",
             "name": "Launch StringOptimization",
             "request": "launch",
             "mainClass": "StringOptimization",
